# ipyprofiler

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pixi.toml  pyproject.toml  tsconfig.eslint.json  tsconfig.json  tsconfigbase.json  webpack.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md  release.md
.github/workflows/: ci.yml  pages.yml  test.yml
docs/: conf.py  demo.md  index.md
docs/_static/: theme.css
examples/: jupyter_lite_config.json
examples/files/: 00_index.ipynb  01_flamegraph.ipynb  02_python.ipynb  03_samples_app.ipynb  04_sqlalchemy.ipynb  README.md  requirements-sqlalchemy.txt  requirements.txt
js/: index.ts  plugin.ts  renderer.ts  tokens.ts  tsconfig.json  widgetplugin.ts  widgets.ts
js/widgets/: flamegraph.ts  index.ts  json.ts
src/ipyprofiler/: __init__.py  base.py  constants.py  widget_callgraph.py  widget_flamegraph.py  widget_profile.py  widget_pyinstrument.py
style/: base.css  index.css  widget.css
tests/: __init__.py  conftest.py  test_callgraph.py  test_flamegraph.py  test_meta.py  test_notebooks.py  test_pyinstrument.py  theme.css
